resolved issue with navbar being behind info content.

--- a/src/App.css
+++ b/src/App.css
@@ -68,12 +68,14 @@ min-height: calc( 100vh - 50px);
 .dark-mode-nav{
   background: rgb(0, 0, 0);
   color: whitesmoke;
-  box-shadow: 2px 0px whitesmoke;
+  box-shadow: 2px 0.5px whitesmoke;
   font-size: 18px;
   height: 50px;
   position: fixed;
   top: 0;
   width: 100%;
+  margin-bottom: 10px;
+  z-index: 10
 }
 
 .background{
@@ -82,9 +84,8 @@ min-height: calc( 100vh - 50px);
 }
 
 #info {
-	position: absolute;
+	position: relative;
 	text-align: left;
-  z-index: 0;
   display:block;
   background: whitesmoke;
   font-size: 18px;
@@ -118,4 +119,8 @@ min-height: calc( 100vh - 50px);
 .row{
   margin-left: 0;
   margin-right: 0;
+}
+
+.pushdown{
+  margin-bottom: 1000px;
 }
